[metadata]
name = dssex
version = 0.0.8
author = pyprg
author_email = pyprg@outlook.com
description = Means for experimental State Estimation of electric Distribution Networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyprg/dssex
project_urls =
    Bug Tracker = https://github.com/pyprg/dssex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    casadi >=3.6.2
    egrid >=0.0.7
    numpy >=1.24.3
    pandas >=2.0.1
    scipy >=1.10.1

[options.packages.find]
where = src